Almost completed level 300. Need to fix the overlapping top search bar covering the episode card tiles when an episode is  selecting in the drop down menu

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* html {
+  scroll-behavior: smooth;
+} */
+
 body {
   background-color: lightgrey;
 }
@@ -16,8 +20,8 @@ body {
 }
 
 #search-input {
-  margin: 1rem;
-  padding: 1rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
 }
 
 .cards-container {
